# testing

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/actions/slack-on-failure/: action.yml
.github/workflows/: build.yml  pr.yml  test.yml
.github/workflows/actions/slack-on-failure/: action.yml
project/: app.py
tests/: requirements-test.txt
tests/unit_tests/: test_sample.py
