[tool.poetry]
name = "ai-backend"
version = "1.0.0"
description = "ai-backend"
authors = ["ai-backend"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
boto3 = "^1.35.46"
celery = "^5.4.0"
certifi = "^2024.8.30"
en-core-web-lg = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.7.0/en_core_web_lg-3.7.0-py3-none-any.whl"}
flask = "^3.0.3"
gunicorn = "^22.0.0"
nltk = "^3.9.1"
numpy = "<2.0.0"
openai = "~1.35.0"
protobuf = "^4.25.3"
redis = "^5.0.6"
spacy = "^3.7.5"
supervisor = "^4.2.5"
transformers = "~4.38.0"


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pipreqs = "^0.5.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
pytest-schema = "^0.1.2"
requests-mock = "^1.12.1"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
poetry-plugin-export = "^1.8.0"
poetry-plugin-sort = "^0.2.1"
pre-commit = "^3.7.0"
tox = "^4.14.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
